tests/snapshots/run_wpt_conformance__trtx_reduceMax_float16_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_max.https.any.js",
    "reduceMax float16 0D constant tensor empty axes",
    "trtx",
    "PASS",
)
